[package]
name = "paladin_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }

serde_json = "1.0"

base64 = "0.22"

solana-client = { version = "2.3.6" }
solana-streamer = { version = "2.3.6" }
solana-rpc-client-api = { version = "2.3.6" }
solana-tls-utils = "2.3.6"
solana-tpu-client-next = "2.3.6"

solana-quic-definitions = "2.3.1"
solana-sdk = { version = "2.3.1" }

solana-commitment-config = "2.2.1"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3", default-features = false }

rustls = { version = "0.23.15", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["macros", "tower-log"] }
quinn = "0.11.6"
tokio-util = "0.7.14"
futures = "0.3.31"
futures-util = "0.3.31"
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = "1.0.97"
lru = "0.16.0"
bincode = "1.3.3"

[dev-dependencies]
once_cell = "1.21.3"
