[package]
name = "paladin_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }

serde_json = "1.0"

base64 = "0.22"

solana-client = { version = "2.3.6" }
solana-rpc-client-api = { version = "2.3.6" }
solana-tls-utils = "2.3.6"
solana-streamer = { git = "https://github.com/paladin-bladesmith/paladin-solana.git", tag = "v2.3.6-paladin" }
paladin-lockup-program = { git = "https://github.com/paladin-bladesmith/paladin-solana.git", tag = "v2.3.6-paladin" }
solana-tpu-client-next = "2.3.6"
spl-discriminator = "0.4.1"
solana-quic-definitions = "2.2.1"
solana-sdk = { version = "2.2.1" }

solana-commitment-config = "2.2.1"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3", default-features = false }

rustls = { version = "0.23.15", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
itertools = "0.14.0"
axum = { version = "0.8.1", features = ["macros", "tower-log"] }
quinn = "0.11.6"
quinn-proto = "0.11.12"
tokio-util = "0.7.14"
futures = "0.3.31"
futures-util = "0.3.31"
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = "1.0.97"
lru = "0.16.0"
bincode = "1.3.3"
log = "0.4.27"
bytemuck = "1.23.1"
crossbeam-channel = "0.5.15"
bytes = "1.10.1"
core_affinity = "0.8.3"
auto_impl = "1.3.0"
jsonrpsee = { version = "0.25.1", features = ["macros", "server", "client", "jsonrpsee-types"] }
reqwest = "0.12.22"
metrics-exporter-prometheus = "0.17.2"
metrics = "0.24.2"

[dev-dependencies]
once_cell = "1.21.3"
solana-system-interface = "1.0.0"
solana-compute-budget-interface = "2.2.2"
