[package]
name = "jsonrpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
jsonrpsee = { version = "0.22", features = ["server"] }
p3-lib = { path = "../p3-lib" }
